--- a/dev/flat_minimal.Rmd
+++ b/dev/flat_minimal.Rmd
@@ -258,12 +258,12 @@ test_that("power_calc works", {
 
 
 
-## Generate power curve
+## gen_pow_curve
 
 Generates a table with sample size (confirmed cases and to be screened) calculated for a sequence of desired powers using the "sample_size_calculation" function.
     
 ```{r function-gen_pow_curve}
-#' gen_pow_curve
+#' Generate power curve
 #' 
 #' Calls sample_size_calculation twice to calculate the number of confirmed cases and number of participants to be screened for a sequence of desired powers.
 #' 
@@ -271,7 +271,7 @@ Generates a table with sample size (confirmed cases and to be screened) calculat
 #' @param sen_spe expected sensitivity/specificity
 #' @param alpha significance level
 #' @param margin error margin (half width of the confidence interval)
-#' @param prevalence expected disease power
+#' @param prevalence expected disease prevalence
 #' @param prevalence_power power to predict the prevalence
 #' @param performance_characteristic the performance characteristic that is being evaluated
 #'
