added a non-inferiorit sample size calculation formula

--- a/dev/flat_minimal.Rmd
+++ b/dev/flat_minimal.Rmd
@@ -478,7 +478,53 @@ test_that("compare_proportions works", {
 })
 ```
   
+# sample_size_non_inferiority
+    
+```{r function-sample_size_non_inferiority}
+#' Sample Size non-inferiority
+#' 
+#' Gives the sample size for a diagnostic accuracy non-inferiority trial, based on estimated accuracy for each test and a minimum non-acceptable difference. Variance is calculated using the Eq.6.21 from Zhou et al., which was originally published in Blume et al. 2009.
+#' 
+#' @param se1 Sensitivity/Specificity of the comparator test
+#' @param se2 Sensitivity/Specificity of the index test
+#' @param r Correlation coefficient: 0 for an unpaired design, 0.5 for a paired design. Default = 0.5
+#' @param min_dif Minimum non-acceptable difference
+#' @param alpha Significance level
+#' @param power Desired power
+#'
+#' @return Sample size
+#' 
+#' @export
+#' 
+#' @references Zhou XH, Obuchowski NA and McClish DK. Statistical Methods in Diagnostic Medicine. 2011;2:193-228
+#' @references Blume J. D. (2009). Bounding Sample Size Projections for the Area Under a ROC Curve. Journal of statistical planning and inference, 139(1), 711–721.
+#' 
 
+
+sample_size_non_inferiority <- function(se1, se2, r, min_dif, alpha, power ){
+  
+  var <- se1*(1-se1) + se2*(1-se2) - 2*r*sqrt(se1*(1-se1)*se2*(1-se2))
+
+  nominator <- (qnorm(alpha) + qnorm(1-power))^2 * var
+  denominator <- (se1-se2-min_dif)^2
+  sample_size <- nominator/denominator
+  sample_size <- ceiling(sample_size)
+  
+  return(sample_size)
+    
+}
+```
+  
+```{r example-sample_size_non_inferiority}
+sample_size_non_inferiority(se1 = 0.9, se2 = 0.88, r = 0.5, min_dif=0.05, alpha=0.05, power=0.8)
+```
+  
+```{r tests-sample_size_non_inferiority}
+test_that("sample_size_non_inferiority works", {
+  expect_true(inherits(sample_size_non_inferiority, "function")) 
+})
+```
+  
 
 
 ```{r development-inflate, eval=FALSE}
