--- a/vignettes/sample-size-calculations.Rmd
+++ b/vignettes/sample-size-calculations.Rmd
@@ -141,6 +141,21 @@ cluster_random_sample_size(alpha=0.05, power=0.8, coef_var=0.25, A =2, pi=0.01, 
 
 
 
+### Effective Sample Size
+
+The effective sample size (ESS) accounts for the clustering structure in clustered data and provides an estimate of the sample size needed to achieve the same level of precision as a simple random sample of the same size.
+
+E.g., if you have 4 physicians’ offices enrolling 32 patients each, you have 128 subjects in your study. Depending on the intracluster correlation coefficient and the design effect, however, you may effectively have far fewer subjects enrolled in your trial from a statistical perspective i.e., the effective sample size.
+
+
+```{r example-effective_sample_size}
+
+# In a cluster randomized controlled trial, you have 8 clusters with 30 participants per cluster i.e., total sample size of 240 and an ICC of 0.2. A simple method to calculate the power associated with this sample size is to first calculate the effective sample size i.e., the sample size in a simple random sample that would give the same level of precision, and then do a power calculation using the ESS. 
+
+effective_sample_size(m = 30, k =8, ICC = 0.2)
+
+```
+
 ## Compare proportions in a 2 sample cross-over design
 
     
