--- a/vignettes/sample-size-calculations.Rmd
+++ b/vignettes/sample-size-calculations.Rmd
@@ -176,6 +176,25 @@ compare_proportions_cross(alpha = 0.05, power = 0.8, p_diff = 0.1, var = 0.5)
     
 
   
+  
+
+# ss_non_inf_2
+
+    
+
+  
+
+```{r example-ss_non_inf_2}
+#' \dontrun{
+ss_non_inf_2(theta_s = 0.45, theta_e = 0.43, delta_m = 0.07, beta = 0.8)
+ss_non_inf_2(theta_s = 0.45, theta_e = 0.43, delta_m = 0.07, beta = 0.8, p11 = 0.5)
+#' }
+```
+
+  
+
+  
+  
 
 ```{r example-sample_size_non_inferiority}
 sample_size_non_inferiority(se1 = 0.9, se2 = 0.88, r = 0.5, min_dif=0.05, alpha=0.05, power=0.8)
