documentation of ss_non_inf_2 updated

--- a/dev/flat_minimal.Rmd
+++ b/dev/flat_minimal.Rmd
@@ -580,7 +580,8 @@ test_that("sample_size_non_inferiority works", {
 ```{r function-ss_non_inf_2}
 #' Sample Size non-inferiority method 2 
 #' 
-#' Gives a sample size range for a diagnostic accuracy trial with non-inferiority hypothesis, based on estimated accuracy for each test and a minimum non-acceptable difference (Eq. 6.24 from Zhou et al. 2011)  Variance is calculated using the Eq.6.15 from Zhou et al., with a
+#' Gives a sample size  for a diagnostic accuracy trial with non-inferiority hypothesis, based on estimated accuracy for each test and a minimum non-acceptable difference (Eq. 6.24 from Zhou et al. 2011)  Variance is calculated using the Eq.6.15 from Zhou et al. In default version, the variance is calculated twice for the case when there is perfect correlation between the test results and the case when the correlation between the tests are equal to 0. A sample size for both scenarios and their mean is provided. In case of unknown correlation with a "modearate" expectation, mean value can be used.
+#' 
 #' 
 #' @param theta_s numeric value between 0 and 1. performance estimate of standard test
 #' @param theta_e numeric value between 0 and 1. performance estimate of experimental test
